--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,19 +5,9 @@
 
 trigger:
 - master
-
-strategy:
-  matrix:
-    linux:
-      imageName: "ubuntu-16.04"
-    mac:
-      imageName: "macos-10.14"
-    windows:
-      imageName: "vs2017-win2016"
-  maxParallel: 3
-
+ 
 pool:
-  vmImage: $(imageName)
+  vmImage: "ubuntu-16.04"
 
 variables:
   buildConfiguration: 'Release'
